--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,5 @@ dependencies:
   - numpy
   - matplotlib
   - pandas
-  - sklearn
-  - sklearn.preprocessing
-  - sklearn.decomposition
+  - scikit-learn
+
